name:                   authenticate-oauth-cli
version:                0.0.0
author:                 Pat Brisbin <pbrisbin@gmail.com>
maintainer:             Pat Brisbin <pbrisbin@gmail.com>
license:                MIT
license-file:           LICENSE
-- synopsis:               Short description, appears in Hackage listings
-- description:            Long explanation, appears at top of project page
cabal-version:          >= 1.10
build-type:             Simple

library
  default-language:     Haskell2010
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      Web.Authenticate.OAuth.CLI
  build-depends:        base >= 4.6 && < 5
                      , authenticate-oauth >= 1.5 && < 1.6
                      , bytestring
                      , directory
                      , filepath
                      , http-conduit >= 2.0 && < 2.2
                      , transformers
                      , xdg-basedir

source-repository head
  type:                 git
  location:             https://github.com/pbrisbin/authenticate-oauth-cli
